# ml-ops-demo

./: Makefile  README.md  pyproject.toml
docker/: Dockerfile
src/: data.py  flow.py  model.py  stratification.py
terraform/: main.tf  outputs.tf  providers.tf  variables.tf
version-flow/: CLAUDE.md  Dockerfile  Makefile  README.md  coverage.xml  docker-compose.yaml  pyproject.toml
version-flow/scripts/: container-exec.sh  container-run.sh  docker-login.sh  get-version.sh  register-build.sh
version-flow/test-results/: junit.xml  report.html
version-flow/tests/: conftest.py  test_clairity_repo.py  test_cli.py  test_fda_flows.py  test_git_utilities.py  test_github_api.py  test_message_parsing.py  test_project_config.py  test_trunk_flow.py  test_version.py
version-flow/tests/data/fake_projects/poetry1.x-project/: pyproject.toml
version-flow/tests/data/fake_projects/poetry2.x-project/: pyproject.toml
version-flow/tests/data/fake_projects/uv-project/: pyproject.toml
version-flow/tests/data/fake_projects/uv-project/workbench/: __init__.py
version-flow/thoughts/findings/: dulwich-1.1-migration-report.md
version-flow/thoughts/tickets/: 01-config-options.md  02-prefixed-tag-creation.md  03-prefix-aware-tag-discovery.md  04-path-scoped-commit-filtering.md  05-trunk-flow-wiring.md  06-fda-flow-wiring.md  07-release-pr-scoping.md  08-documentation.md
version-flow/version_flow/: __init__.py  alt_version_workbench.ipynb  auc_report_generator_debug.ipynb  clairity_repo.py  clairity_repo.py,cover  cli.py  cli.py,cover  errors.py  errors.py,cover  fda_flows.py  fda_flows.py,cover  git.py  git.py,cover  message.py,cover  message_parsing.py  message_parsing.py,cover  project_config.py  project_config.py,cover  project_version.py  project_version.py,cover  repo_config_workbench.ipynb  trunk_flow.py  trunk_flow.py,cover  types.py  types.py,cover  version.py  version.py,cover  workbench.ipynb  workbench.py,cover
version-flow/version_flow/.ipynb_checkpoints/: workbench-checkpoint.ipynb
