[tool.poetry]
name = "workbench"
version = "v1.2.3-rc.4"
description = ""
authors = ["Test Testerson <ttesterson@clairity.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.2.4"
ipykernel = "^6.29.5"
pydantic = "<2.0"
boto3 = "^1.35.4"
awswrangler = "^3.9.1"
pytest = "^8.3.2"
moto = {extras = ["dynamodb", "s3", "ssm"], version = "^5.0.13"}
semver = "^3.0.2"
dulwich = "^0.22.1"
lorem = "^0.1.1"
click = "^8.1.7"
tomlkit = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
workbench = "workbench.app:main"
